src/test/deca/syntax/valid/type_inconnu.deca
// Description:
//    type inconnue d'une variable mais passe normalement syntaxiquement
//
// Resultats:
//    Passe l'analyse syntaxique
//
// Historique:
//    cree le 05/01/2023
class test 
{
    public nti a,b;    
}
